--- a/src/routes/landing/routes/races/routes/live/components/liveRaceStreamList/liveRaceStreamList.scss
+++ b/src/routes/landing/routes/races/routes/live/components/liveRaceStreamList/liveRaceStreamList.scss
@@ -1,55 +1,149 @@
 @import '~css/variables';
 
 .live-race-stream-list{
+  height:100%;
+  overflow:hidden;
   .stream {
-    top:0;
-    left:0;
-    padding:0;
-    position:relative;
-    img, stream-header {
-      width:100%;
-    }
-    iframe {
-      border:none;
-      height: 100%;
-      width:100%;
-    }
+    position: relative;
+    display:block;
+    float:left;
+    background-color: $main-background;
+    background-image: url(../../../../../../../../css/vendor/images/Glitch_Purple_RGB.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 20%;
+    transition: width .3s, height .3s;
+
     .iframe-wrapper {
-      position: absolute;
-      overflow: hidden;
-      top:0;
       width:100%;
       height:100%;
     }
-
-  // linear-gradient(0deg,rgba(0,0,0,.8) 0,rgba(0,0,0,.35) 60%,transparent);
+    iframe {
+      border:1px solid $main-background;
+      height: 100%;
+      width:100%;
+    }
 
     &:hover{
-      .stream-header {opacity: 1;}
+      .close-btn {opacity: 1;}
     }
-    .stream-header {
+    .close-btn {
       opacity: 0;
       transition: opacity .15s ease-out;
       position: absolute;
-      z-index: 9999;
-      background: linear-gradient(rgba(0,0,0,.95), transparent);
-      width: 100%;
-      color:#fff;
-      font-size: 1.5em;
-      padding:10px 15px 20px;
-      text-shadow: 0 0 6px #222;
-      div {
-        display:inline-block;
-      }
-      .text-btn {
-        user-select: none;
-        float:right;
-        font-size:1.2em;
-        &:hover {
-          color:$srl-blue;
-          cursor: pointer;
-        }
+      right:0;
+      padding: 10px 17px;
+      user-select: none;
+      float:right;
+      font-size:1.8em;
+      color:$white;
+      font-weight: $bold;
+      background-color: $coal-grey;
+      text-shadow: 1px 2px 5px $main-background;
+      border-bottom-left-radius: 8px;
+      cursor: pointer;
+      
+      &:hover {
+        color:$srl-blue;
       }
     }
   }
+
+  /********** STREAM GRID SYSTEM **********/
+  .liquid-1 {width: 100%; height:100%;}
+  .liquid-2 {width: 100%; height:50%;}
+  .liquid-3 {
+    &:first-child {width: 100%;}
+    width: 50%; height:50%;
+  }
+  .liquid-4 {width: 50%; height:50%;}
+  .liquid-5 {
+    &:nth-child(1),&:nth-child(2)  {width: 50%;}
+    width: 33%; height:50%;
+    &:nth-child(4){width: 34%;}
+  }
+  .liquid-6 {
+    width: 50%; height:33%;
+    &:nth-child(n+5){height: 34%;}
+  }
+  .liquid-7 {
+    width:50%; height: 33%;
+    &:nth-child(n+5) {height:34%;width:33%;}
+    &:nth-child(6) {width:34%;}
+  }
+  .liquid-8 {
+    width: 33%; height:33%;
+    &:nth-child(2),&:nth-child(5), {width: 34%}
+    &:nth-child(n+7) {width: 50%;height:34%}
+  }
+  .liquid-9 {
+    &:nth-child(2), &:nth-child(5), &:nth-child(8) {width: 34%;}
+    &:nth-child(n+7) {height:34%;}
+    width: 33%; height:33%;
+  }
+  .liquid-10 {
+    &:nth-child(1),&:nth-child(3),&:nth-child(4),&:nth-child(6) {width: 33%;}
+    &:nth-child(2), &:nth-child(5){width: 34%;}
+    &:nth-child(n+7) {height:34%;}
+    width: 25%; height:33%;
+  }
+  .liquid-11 {
+    &:nth-child(1),&:nth-child(3) {width: 33%;} &:nth-child(2) {width:34%;}
+    &:nth-child(n+8) {height:34%;}
+    width: 25%; height:33%;
+  }
+  .liquid-12 {
+    width: 25%; height:33%;
+    &:nth-child(n+9) {height:34%;}
+  }
+  .liquid-13 {
+    width: 33%; height:25%;
+    &:nth-child(2), &:nth-child(5), &:nth-child(8) {width: 34%;}
+    &:nth-child(n+10){width: 25%;}
+  }
+  .liquid-14 {
+    width: 33%; height:25%;
+    &:nth-child(2), &:nth-child(5), &:nth-child(8) {width: 34%;}
+    &:nth-child(n+7){width: 25%;}
+  }
+  .liquid-15 {
+    &:nth-child(1), &:nth-child(3){width:33%} &:nth-child(2) {width:34%;}
+    width: 25%; height:25%;
+  }
+  .liquid-16 {width: 25%; height:25%;}
+  .liquid-17 {
+    width: 25%; height:25%;
+    &:nth-child(n+13){width:20%}
+  }
+  .liquid-17 {
+    width: 25%; height:25%;
+    &:nth-child(n+13){width:20%}
+  }
+  .liquid-18 {
+    width: 25%; height:25%;
+    &:nth-child(n+9){width:20%}
+  }
+  .liquid-19 {
+    width: 25%; height:25%;
+    &:nth-child(n+5){width:20%}
+  }
+  .liquid-20 {width: 25%; height:20%;}
+  .liquid-21 {
+    width: 25%; height:20%;
+    &:nth-child(n+17){width:20%}
+  }
+  .liquid-22 {
+    width: 25%; height:20%;
+    &:nth-child(n+13){width:20%}
+  }
+  .liquid-23 {
+    width: 25%; height:20%;
+    &:nth-child(n+9){width:20%}
+  }
+  .liquid-24 {
+    width: 25%; height:20%;
+    &:nth-child(n+5){width:20%}
+  }
+  .liquid-25 {width: 20%; height:20%;}
+
 }
