Add navigation unit test

--- a/src/routes/landing/components/navigation/navigation.scss
+++ b/src/routes/landing/components/navigation/navigation.scss
@@ -2,12 +2,8 @@ nav {
     padding: 8px 0 10px 0;
     overflow: hidden;
     clear:both;
-
     .primary {
         float: left;
-
-        a {
-            margin: 5px 15px 0 0;
-        }
+        a {margin: 5px 15px 0 0;}
     }
 }
