Add Header and Footer unit tests

--- a/src/routes/landing/components/header/header.scss
+++ b/src/routes/landing/components/header/header.scss
@@ -7,7 +7,7 @@ header {
     background: linear-gradient(to top, $darker-grey-background, $main-background);
 }
 
-.srlLogo {
+.srl-logo {
     display: block;
     width: 305px;
     height: 43px;
