Added Race Icons, using cdn Closes #22

--- a/src/routes/landing/routes/races/components/racesNavigation/racesNavigation.scss
+++ b/src/routes/landing/routes/races/components/racesNavigation/racesNavigation.scss
@@ -8,5 +8,11 @@
         &:not(:first-of-type) {
             border-radius: initial;
         }
+        img {
+          float: right;
+          position: relative;
+          right: 13px;
+          opacity: 0.18;
+        }
     }
 }
